test/ui/test/packages/invalid-dependency-provider/package.metadata
# TEST fail check

name: future,
version: "99.99.999",

components: {
    main: {
        type: executable,
        "path": "wherever",
        dependencies: {
            thing0: { component: else, provider: "weird$" },
            thing1: { provider: unknown },
        },
    },
},
